--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     <version>3.0.1</version>
     <scope>provided</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    <version>5.3.24</version>
+</dependency>
 
 
     <dependency>
