--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 </dependency>
 
 
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-core</artifactId>
+    <version>5.3.24</version>
+</dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
