--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
     <artifactId>spring-core</artifactId>
     <version>5.3.24</version>
 </dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>5.3.24</version>
+</dependency>
+
 
 
     <dependency>
@@ -49,3 +55,4 @@
     <finalName>WIFI_1</finalName>
   </build>
 </project>
+
