--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
 
 <dependency>
-    <groupId>org.springframework</groupId>
+    <groupId>org.springframework</groupId>.......
     <artifactId>spring-core</artifactId>
     <version>5.3.222</version>
 </dependency>
